--- a/radio-ld.cabal
+++ b/radio-ld.cabal
@@ -21,5 +21,9 @@ executable radio-ld
   -- other-extensions:    
   build-depends:       base >=4.6 && <4.7
                        , tagsoup == 0.13.1
+                       , aeson == 0.7.0.6
+                       , aeson-pretty == 0.7.1
+                       , bytestring
+                       , directory
   -- hs-source-dirs:      
   default-language:    Haskell2010
