--- a/radio-ld.cabal
+++ b/radio-ld.cabal
@@ -19,11 +19,12 @@ executable radio-ld
   main-is:             Main.hs
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.6 && <4.7
+  build-depends:       base >=4.5 && <4.7
                        , tagsoup == 0.13.1
                        , aeson == 0.7.0.6
                        , aeson-pretty == 0.7.1
                        , bytestring
                        , directory
+                       , ghc-prim
   -- hs-source-dirs:      
   default-language:    Haskell2010
